0.1.3   xx-xxx-2008
  o Correct the tab order on the custom bandwidth settings tab. (Ticket #351)


0.1.2   24-Mar-2008
  o Correctly load the CA certificate used to verify SSL connections to the
    GeoIP server. This caused Vidalia >= 0.1.0 clients built against Qt >=
    4.3.2 to be unable to retrieve updated GeoIP information. (Ticket #349)
  o Fix compilation when UINT_MAX is not defined. (Ticket #350)
  o Bridges are no longer required to have a DirPort set as of Tor
    0.2.0.13-alpha, so stop forcing it on for bridges. At some point, we'll
    likely start forcing DirPort to be disabled for bridges, and on by default
    but optional for normal relays. (Ticket #337)
  o Fix a typo in VidaliaMacros.cmake that would allow configuration to
    continue even if windres.exe couldn't be found.
  o Update the version of Torbutton included in the OS X bundle to
    1.1.17-alpha, and actually include the bundle's uninstaller script.
  o Updated Finnish and Swedish translations.


0.1.1   17-Mar-2008
  o Use CMake to configure the version number that ends up getting displayed
    in the About box.
  o Update the RPM .spec file with the new CMake requirements. Patch from Oliver
    Niesner.
  o TunnelDirConns and PreferTunneledDirConns are now enabled by default as of
    Tor 0.2.0.22-rc.
  o Don't check the 'My ISP blocks connections to the Tor network' box simply
    because TunnelDirConns is enabled. Checking the box still enables
    encrypted directory connections on older Tors.
  o Add a Japanese GUI translation from Nardog
  o Updated Finnish and Swedish translations


0.1.0   01-Mar-2008
  o Migrate to CMake as our build system, instead of the previous mix of
    autoconf and qmake. See the updated INSTALL file for more information.
  o Add an OpenSSL license exception so Vidalia can be linked against OpenSSL
    and redistributed. Also include the text of the GPLv3, since our license
    says "GPLv2 or later."