@@ -22,13 +22,6 @@ link_directories(
   ${CMAKE_CURRENT_BINARY_DIR}/util
 )
 
-if (APPLE)
-  if (OSX_FAT_BINARY)
-    ## Set the appropriate flags for building a Universal binary
-    set(CMAKE_OSX_ARCHITECTURES ppc i386)
-  endif(OSX_FAT_BINARY)
-endif(APPLE)
-
 if(MSVC)
   add_definitions(-D_USE_MATH_DEFINES=1)
 endif(MSVC)
