@@ -1,6 +1,8 @@
 0.1.3   xx-xxx-2008
+  o Fix the OSX_FAT_BINARY build option so that it actually does produce a
+    Universal binary when enabled. (Ticket #342)
   o Correct the tab order on the custom bandwidth settings tab. (Ticket #351)
-
+ 
 
 0.1.2   24-Mar-2008
   o Correctly load the CA certificate used to verify SSL connections to the
